fix(maadlani): fixing comments overflow
* fixing comments overflow

* displaying like and dislike buttons only while logged in and span while logged out

* fixing the duplication of like and dislike display

* fixing double like/dislike display

* post's title overflow fixed

* limiting the height of long posts in home

* clickable posts

* rendering error on the registartion/login page

* add form error in page

* added form error and checked box

* new post error /not finished yet

* checked category checkbox

* new post error fixed

* fixed duplicate addcomment func

---------

--- a/static/styles.css
+++ b/static/styles.css
@@ -463,6 +463,7 @@ form.inline {
   padding-left: 1.5rem;
 }
 
+
 .post-card header {
   display: flex;
   align-items: flex-start;
@@ -507,6 +508,7 @@ form.inline {
   overflow: hidden;
   line-height: 1.6;
   font-weight: 400;
+  max-height: 40vh;
 }
 
 .categories, .tags {
